# untifted

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: level.json
assets/levels/: _template.json  level.json
src/: colors.rs  debugger.rs  editor.rs  game.rs  main.rs  menu.rs  splash.rs  systems.rs  ui.rs
src/debugger/: editor.rs  entities.rs  info.rs  orbit_zoom_pan_camera.rs  physics_debug_render.rs  ui.rs  window.rs
src/editor/: orbit_zoom_pan_camera.rs
src/game/: block.rs  camera.rs  data.rs  level_loader.rs  loading.rs  paused.rs  physics.rs  plane.rs  player.rs  playing.rs
src/game/loading/: game_loader.rs  level_loader.rs
src/game/playing/: state_machine.rs
