[package]
name = "untifted"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"] }
bevy_rapier3d = { version = "0.29.0" }
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
